--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=portfoliomanagement
+
+spring.datasource.url = jdbc:postgresql://localhost:5332/dashboard
+spring.datasource.username = user
+spring.datasource.password = password
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.show-sql=true
+
+server.port = 8081
+
+
+
